2012-07-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSXMLNode.m: Just report string value as description ...
        which appears to be what OSX does.
        * Tests/base/KVC/mutable.m: Add tests based on code by Riccardo.

2012-07-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSKeyValueObserving.m:
        * Source/GSFFIInvocation.m:
        * Source/GSPrivate.h:
        * Source/NSInvocation.m:
        * Source/cifframe.h:
        * Source/cifframe.m:
        Initial attempt at implementing KVO for structure setter methods in
        general via libffi.

2012-07-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-description): Remove trailing newline. This
	should fix #36976.

2012-07-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m:
	* Source/NSKeyValueObserving.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/NSProtocolChecker.m:
	* Source/GSValue.m:
	* Source/NSValue.m:
        Use GSSelectorTypesMatch() for type comparisons.

2012-07-12 19:26-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSFileManager.m: Correct misspelled ASSIGN which was
	causing link errors.

2012-07-11  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Additions/GSMime.m: Don't accept documents where header lines
        contain bytes which can't be converted to a string.

2012-07-11  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSKeyedArchiver.m:
        * Source/NSCoder.m:
        * Source/Additions/GSObjCRuntime.m:
        * Source/NSArchiver.m:
        * Headers/GNUstepBase/GSObjCRuntime.h:
        Have leading type qualifiers and laout information skipped when
        encoding a value of on ObjC type, rather than objecting that the
        supplied type string is not a known type.
        Fix for bug #36824

2012-07-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFFIInvocation.m: Fix for bug #36706